[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menu/PauseMenu.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.254902, 0.203922, 0.00784314, 0.588235 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.184314, 0.172549, 0.172549, 0.862745 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Pause" type="Control"]
pause_mode = 2
anchor_left = 0.00105143
anchor_right = 1.00106
anchor_bottom = 1.0
margin_left = -0.480042
margin_top = 0.576813
margin_right = -0.47998
margin_bottom = 0.576782
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.500357
anchor_right = 0.500357
margin_left = -250.513
margin_top = 163.3
margin_right = 249.487
margin_bottom = 466.3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 3.76701e-05
anchor_right = 1.0557
anchor_bottom = 0.143333
margin_left = 451.961
margin_top = 249.0
margin_right = -523.039
margin_bottom = 250.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 114.0
margin_bottom = 14.0
text = "Jeu en pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonReprendre" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 114.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( -987.065, -387.769 )
text = "Reprendre"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRecommencer" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 114.0
margin_bottom = 62.0
text = "Recommencer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMenu" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 114.0
margin_bottom = 86.0
text = "Retour au menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonQuitter" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 114.0
margin_bottom = 110.0
text = "Quitter"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ButtonReprendre" to="." method="_on_ButtonReprendre_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRecommencer" to="." method="_on_ButtonRecommencer_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuitter" to="." method="_on_ButtonQuitter_pressed"]
